--- a/css/devicons.css
+++ b/css/devicons.css
@@ -1,5 +1,5 @@
 ﻿/*!
- *  Devicons 1.8.0 made by Theodore Vorillas / http://vorillaz.com 
+ *  Devicons 1.8.0 made by Theodore Vorillas / http://vorillaz.com
  */
 @font-face {
   font-family: 'devicons';
@@ -9,17 +9,45 @@
   font-style: normal;
 }
 
-.devicons {
+.devicons_1 {
   font-family: 'devicons';
   speak: none;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 1;
+  line-height: 0.7;
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 6em;
+}
+.devicons_2 {
+  font-family: 'devicons';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 0.58;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 6em;
+}
+
+.devicons_3 {
+  font-family: 'devicons';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 0.58;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 7em;
 }
 
 .devicons-git:before {
