--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ a, a:focus, a:hover {
 }
 
 a:focus, a:hover {
-    color: #6cb674;
+    color: #82c8d8;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn-green {
-    background-color: #6cb674;
+    background-color: #82c8d8;
 }
 
 .btn-green:focus,
@@ -107,11 +107,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .btn-transparent:focus {
     background-color: transparent;
-    border-color: #6cb674;
+    border-color: #82c8d8;
 }
 
 .btn-transparent:hover {
-    background-color: #6cb674;
+    background-color: #82c8d8;
 	border: 1px solid transparent;
     color: #fff;
 }
@@ -204,7 +204,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .color {
-    color: #6cb674;
+    color: #82c8d8;
 }
 
 .sub-title {
@@ -320,12 +320,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-inverse .navbar-nav > li.current > a {
-    color: #6cb674;
+    color: #82c8d8;
     background-color: #2f3238;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover {
-    color: #6cb674;
+    color: #82c8d8;
 }
 
 
@@ -792,7 +792,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mask ul li a:hover {
-    background-color: #6cb674;
+    background-color: #82c8d8;
     border: 1px solid transparent;
 }
 
@@ -808,9 +808,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .twitter-bird span {
-    border: 2px solid #6cb674;
+    border: 2px solid #82c8d8;
     border-radius: 50px;
-    color: #6cb674;
+    color: #82c8d8;
     display: inline-block;
     margin-bottom: 50px;
     height: 90px;
@@ -826,7 +826,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .tweet a {
-    color: #6cb674;
+    color: #82c8d8;
 }
 
 /*=================================================================
@@ -847,7 +847,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .price-title > h3 {
-    color: #6cb674;
+    color: #82c8d8;
     font-family: Oswald;
     font-weight: 700;
     margin: 0 0 10px;
@@ -861,7 +861,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .price-title .value {
-	color: #6cb674;
+	color: #82c8d8;
 	font-size: 30px;
 }
 
@@ -949,7 +949,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .social-profile li a:hover {
-	color: #6cb674;
+	color: #82c8d8;
 }
 
 .owl-pagination,
@@ -975,7 +975,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .owl-controls .owl-page.active span,
 .owl-controls .owl-page:hover span {
-    background-color: #6cb674;
+    background-color: #82c8d8;
     border: 2px solid transparent;
 }
 
@@ -1067,7 +1067,7 @@ h1, h2, h3, h4, h5, h6 {
 .contact-form input:hover,
 .contact-form textarea:hover,
 #contact-submit:hover {
-    border-color: #6cb674;
+    border-color: #82c8d8;
 }
 
 #contact-submit {
@@ -1114,7 +1114,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .success {
-    background-color: #6cb674;
+    background-color: #82c8d8;
     border-radius: 4px;
     color: #fff;
     display: none;
@@ -1186,7 +1186,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .social-icon > ul > li:hover a {
-    background-color: #6cb674;
+    background-color: #82c8d8;
 
 	-webkit-transform: rotateY(0deg);
 	   -moz-transform: rotateY(0deg);
@@ -1228,8 +1228,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #scrollUp:hover {
-    background-color: #6cb674;
-    border: 1px solid #6cb674;
+    background-color: #82c8d8;
+    border: 1px solid #82c8d8;
 }
 
 
@@ -1244,9 +1244,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .blog-icon {
-    border: 1px solid #6cb674;
+    border: 1px solid #82c8d8;
     border-radius: 50%;
-    color: #6cb674;
+    color: #82c8d8;
     display: inline-block;
     padding: 16px 20px;
 }
@@ -1336,7 +1336,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .post-meta a:hover {
-	color: #6cb674;
+	color: #82c8d8;
 }
 
 .post-excerpt .more {
@@ -1350,7 +1350,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .post-excerpt .more a:hover {
-    background-color: #6cb674;
+    background-color: #82c8d8;
     color: #fff;
 }
 
@@ -1398,9 +1398,9 @@ aside.widget {
 }
 
 .tab-post-nav li.active a {
-	border-top: 3px solid #6cb674;
+	border-top: 3px solid #82c8d8;
 	background-color: #2F383D;
-	color: #6cb674;
+	color: #82c8d8;
 }
 
 .tab-pane.active .clearfix:first-child {
@@ -1418,7 +1418,7 @@ aside.widget {
 }
 
 .tab-excerpt h4 a:hover {
-	color: #6cb674;
+	color: #82c8d8;
 }
 
 .tab-post-nav li a {
@@ -1440,7 +1440,7 @@ aside.widget {
 
 .categories > li:hover a {
     padding-left: 10px;
-    color: #6cb674;
+    color: #82c8d8;
 }
 
 .categories > li:last-child {
@@ -1461,7 +1461,7 @@ aside.widget {
 }
 
 .widget-content .tag:hover {
-    background-color: #6cb674;
+    background-color: #82c8d8;
     color: #fff;
 }
 
@@ -1497,7 +1497,7 @@ aside.widget {
 
 .post-pagination ul li a:hover,
 .post-pagination ul li.active a {
-    background-color: #6cb674;
+    background-color: #82c8d8;
     color: #fff;
 }
 
@@ -1512,7 +1512,7 @@ aside.widget {
 }
 
 blockquote {
-    border-left: 5px solid #6cb674;
+    border-left: 5px solid #82c8d8;
     font-style: italic;
     line-height: 22px;
     margin: 20px 0;
@@ -1526,7 +1526,7 @@ blockquote {
 }
 
 .next-prev a:hover {
-    color: #6cb674;
+    color: #82c8d8;
 }
 
 .prev-post i {
@@ -1597,7 +1597,7 @@ blockquote {
 }
 
 .author-comment cite a:hover, .replay:hover {
-    color: #6cb674;
+    color: #82c8d8;
     text-decoration: underline;
 }
 
@@ -1623,7 +1623,7 @@ blockquote {
 }
 
 #comment-form .form-control:hover {
-    border-color: #6cb674;
+    border-color: #82c8d8;
 }
 
 .form-group:last-child,
